Fixed alignment of sidebar title to center for small screens

--- a/css/index.css
+++ b/css/index.css
@@ -110,6 +110,11 @@ ul.sidebar-list a {
     margin: .2em 0;
 }
 
+#navbar {
+    display: flex;
+    flex-direction: column;
+}
+
 header.sidebar-title {
     align-self: center;
     font-weight: bold;
